--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/locutus": "^0.0.6",
+    "@types/lodash": "^4.14.160",
+    "axios": "^0.20.0",
+    "bulma": "^0.9.0",
     "core-js": "^3.6.5",
+    "locutus": "^2.0.11",
+    "lodash": "^4.17.20",
+    "sass": "^1.26.10",
+    "sass-loader": "^10.0.1",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0"
   },
