--- a/package.json
+++ b/package.json
@@ -57,7 +57,16 @@
     "parserOptions": {
       "ecmaVersion": 2020
     },
-    "rules": {},
+    "rules": {
+      "indent": "off",
+      "vue/script-indent": [
+        "error",
+        4,
+        {
+          "baseIndent": 1
+        }
+      ]
+    },
     "overrides": [
       {
         "files": [
