--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/gsap": "^1.20.2",
     "@types/locutus": "^0.0.6",
     "@types/lodash": "^4.14.160",
     "axios": "^0.20.0",
     "bulma": "^0.9.0",
     "core-js": "^3.6.5",
+    "gsap": "^3.5.1",
     "locutus": "^2.0.11",
     "lodash": "^4.17.20",
     "sass": "^1.26.10",
