测试文件上传成功

--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@types/gsap": "^1.20.2",
     "@types/locutus": "^0.0.6",
     "@types/lodash": "^4.14.160",
+    "@types/qiniu-js": "^2.5.1",
     "ant-design-vue": "^2.0.0-beta.6",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "gsap": "^3.5.1",
     "locutus": "^2.0.11",
     "lodash": "^4.17.20",
+    "qiniu-js": "^3.1.1",
     "sass": "^1.26.10",
     "sass-loader": "^10.0.1",
     "vue": "^3.0.0-0",
