完成七牛云测试

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "qiniu-js": "^3.1.1",
     "sass": "^1.26.10",
     "sass-loader": "^10.0.1",
+    "uuidjs": "^4.2.6",
     "vue": "^3.0.0-0",
     "vue-axios": "^2.1.5",
     "vue-router": "^4.0.0-0"
