--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ant-design-vue/use": "^0.0.1-alpha.1",
     "@types/gsap": "^1.20.2",
     "@types/locutus": "^0.0.6",
     "@types/lodash": "^4.14.160",
