--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design-vue/use": "^0.0.1-alpha.1",
+    "@types/echarts": "^4.6.5",
     "@types/gsap": "^1.20.2",
     "@types/locutus": "^0.0.6",
     "@types/lodash": "^4.14.160",
@@ -18,6 +19,8 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "dayjs": "^1.8.36",
+    "echarts": "^4.9.0",
+    "echarts-stat": "^1.1.1",
     "gsap": "^3.5.1",
     "locutus": "^2.0.11",
     "lodash": "^4.17.20",
