--- a/.example.env
+++ b/.example.env
@@ -1,1 +1,5 @@
-VUE_APP_API_DOMAIN = ''
+VUE_APP_SHORT_TAG = 'C'
+VUE_APP_PROJECT_NAME_EN= 'CigoAdmin'
+VUE_APP_PROJECT_NAME_CN= '西谷后台'
+VUE_APP_COMPANY_SHORT= '西谷开源'
+VUE_APP_API_DOMAIN = 'http://api-admin.****.com'
