--- a/.example.env
+++ b/.example.env
@@ -2,4 +2,4 @@ VUE_APP_SHORT_TAG = 'C'
 VUE_APP_PROJECT_NAME_EN= 'CigoAdmin'
 VUE_APP_PROJECT_NAME_CN= '西谷后台'
 VUE_APP_COMPANY_SHORT= '西谷开源'
-VUE_APP_API_DOMAIN = 'http://api-admin.****.com'
+VUE_APP_API_DOMAIN = '******'
