--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gsap": "^3.5.1",
     "locutus": "^2.0.11",
     "lodash": "^4.17.20",
+    "moment": "^2.29.0",
     "qiniu-js": "^3.1.1",
     "sass": "^1.26.10",
     "sass-loader": "^10.0.1",
