--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     "echarts": "^4.9.0",
     "echarts-stat": "^1.1.1",
     "gsap": "^3.5.1",
+    "jstat": "^1.9.4",
     "locutus": "^2.0.11",
     "lodash": "^4.17.20",
     "moment": "^2.29.0",
+    "node-sass": "^4.14.1",
     "qiniu-js": "^3.1.1",
     "sass": "^1.26.10",
     "sass-loader": "^10.0.1",
+    "sass-resources-loader": "^2.1.1",
+    "style-loader": "^1.2.1",
     "uuidjs": "^4.2.6",
     "vue": "^3.0.0-0",
     "vue-axios": "^2.1.5",
